added paragraph in about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This website is created by Dhananjay Neje.</p>
         <img class="potrait" src="/img/profile_pic.jpg">
     </div>
     {{>footer}}
